--- a/frontend/src/app/component/searchbar/searchbar.component.html
+++ b/frontend/src/app/component/searchbar/searchbar.component.html
@@ -1,1 +1,34 @@
-<h2>SPACE CADET</h2>
+<!-- <form class="example-form">
+  <input
+    type="text"
+    placeholder="Search for a mate"
+    [formControl]="control"
+    [matAutocomplete]="auto"
+  />
+  <mat-autocomplete #auto="matAutocomplete">
+    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+      {{ option }}
+    </mat-option>
+  </mat-autocomplete>
+</form> -->
+
+<form class="form" [formGroup]="inputForm">
+  >
+  <mat-form-field>
+    <input
+      formControlName="searchBar"
+      type="text"
+      matInput
+      [matAutocomplete]="auto"
+    />
+
+    <mat-autocomplete #auto="matAutocomplete">
+      <mat-option
+        *ngFor="let option of filteredOptions | async"
+        [value]="option"
+      >
+        {{ option }}
+      </mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
+</form>
