--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 * {
   font-family: "Mulish", sans-serif;
   font-size: 10px;
@@ -63,7 +62,7 @@ h1 {
 }
 
 .generate-btn:active {
-  transform: scale(1.2);
+  transform: scale(1.15);
   background-color: #d90429;
 }
 
@@ -78,8 +77,21 @@ h1 {
 
 .input-name input:focus {
   font-size: 2rem;
-  transform: scale(1.025);
+  transform: scale(1.00125);
   outline: none;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+searchbar {
+  margin-top: 1.2rem;
 }
 
 html, body { height: 100%; }
