Able to grab local JSON data and create select html elements.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,7 @@
 <div class="container">
   <h1>Oracle of Ryan Giggs 🏴󠁧󠁢󠁷󠁬󠁳󠁿</h1>
   <div class="input-container">
-    <p class="input-name">
-      Ryan Giggs to <input placeholder="ex: Bruno Fernandes" />
-    </p>
+    <p class="input-name">Ryan Giggs to <searchbar></searchbar></p>
     <button class="generate-btn">Generate</button>
   </div>
-
-  <searchbar></searchbar>
 </div>
