--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -94,5 +94,16 @@ searchbar {
   margin-top: 1.2rem;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+searchbar {
+  margin-top: 0rem;
+  height: 100%;
+}
