Overlap class created, PriorityQueue sorting functionality implemented.

--- a/frontend/src/app/component/searchbar/searchbar.component.html
+++ b/frontend/src/app/component/searchbar/searchbar.component.html
@@ -1,5 +1,5 @@
-<select formControlName="country">
-  <option [ngValue]="null">Bruno Fernandes</option>
+<select>
+  <option [ngValue]="null">(pick a player)</option>
   <option *ngFor="let option of data" [ngValue]="option">
     {{ option }}
   </option>
