Minor edits to front-page + attempted to parse massive JSON file.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <h1>Oracle of Ryan Giggs 🏴󠁧󠁢󠁷󠁬󠁳󠁿</h1>
   <div class="input-container">
-    <p class="input-name">Ryan Giggs to <searchbar></searchbar></p>
+    <p>Ryan Giggs to <searchbar></searchbar></p>
     <button class="generate-btn">Generate</button>
   </div>
+
+  <nodes></nodes>
 </div>
