--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div class="container">
   <h1>Oracle of Ryan Giggs 🏴󠁧󠁢󠁷󠁬󠁳󠁿</h1>
   <div class="input-container">
-    <p>Ryan Giggs to <searchbar></searchbar></p>
-    <button class="generate-btn">Generate</button>
+    <searchbar></searchbar>
   </div>
 
   <nodes></nodes>
