--- a/frontend/src/app/component/searchbar/searchbar.component.html
+++ b/frontend/src/app/component/searchbar/searchbar.component.html
@@ -2,11 +2,13 @@
   <p>
     Ryan Giggs to
     <select #device (change)="onChange($event, device.value)">
-      <option [ngValue]="null">(pick a player)</option>
+      <option [ngValue]="null">Bruno Fernandes (1994-09-08)</option>
       <option *ngFor="let option of data" [ngValue]="option">
         {{ option }}
       </option>
     </select>
   </p>
   <button class="generate-btn">Generate</button>
+
+  <nodes [players]="nodes"></nodes>
 </div>
