--- a/frontend/src/app/component/searchbar/searchbar.component.html
+++ b/frontend/src/app/component/searchbar/searchbar.component.html
@@ -10,5 +10,5 @@
   </p>
   <button class="generate-btn">Generate</button>
 
-  <nodes [showLoader]="loading" [players]="nodes"></nodes>
+  <nodes [players]="nodes"></nodes>
 </div>
