--- a/frontend/src/app/component/nodes/nodes.component.html
+++ b/frontend/src/app/component/nodes/nodes.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <div *ngIf="showLoader" class="loading">🤔🤔🤔</div>
   <div *ngIf="!showLoader">
     <div class="nodes">
       <ng-container *ngFor="let player of players; index as i">
