--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,7 +1,7 @@
 * {
   font-family: "Mulish", sans-serif;
   font-size: 10px;
-  background-color: #f4fdfd;
+  background-color: #f3f3f3;
 }
 
 .container {
