Minor frontend edits.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Oracle of Ryan Giggs 🏴󠁧󠁢󠁷󠁬󠁳󠁿</h1>
+  <h1>Oracle of Giggs 🏴󠁧󠁢󠁷󠁬󠁳󠁿</h1>
   <div class="input-container">
     <searchbar></searchbar>
   </div>
